--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "connect-mongo": "^4.6.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "multer": "^1.4.5-lts.1"
+    "firebase": "^9.17.2",
+    "firebase-admin": "^11.5.0",
+    "firebase-functions": "^4.2.1",
+    "formidable-serverless": "^1.1.1",
+    "multer": "^1.4.5-lts.1",
+    "uuid-v4": "^0.1.0"
   }
 }
